add dependencies (tomp2p & netty)

--- a/appa-core/pom.xml
+++ b/appa-core/pom.xml
@@ -16,4 +16,26 @@
 
     <name>APPA :: Core</name>
 
+    <dependencies>
+
+        <!-- Network -->
+
+        <dependency>
+            <groupId>net.tomp2p</groupId>
+            <artifactId>tomp2p-all</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+        </dependency>
+
+        <!-- Common -->
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
