--- a/appa-core/pom.xml
+++ b/appa-core/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -16,11 +15,13 @@
     <description />
 
     <properties>
+        <jmdns.version>3.5.1</jmdns.version>
+        <mdnsjava.version>2.2.0</mdnsjava.version>
     </properties>
 
     <dependencies>
 
-        <!-- Net -->
+        <!-- Net : DNS -->
 
         <dependency>
             <groupId>org.jmdns</groupId>
@@ -32,6 +33,11 @@
             <artifactId>mdnsjava</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>net.posick</groupId>
+            <artifactId>mdnsjava-spi</artifactId>
+        </dependency>
+
         <!-- Common -->
 
         <dependency>
@@ -40,6 +46,37 @@
         </dependency>
 
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+
+            <!-- Net -->
+
+            <dependency>
+                <groupId>org.jmdns</groupId>
+                <artifactId>jmdns</artifactId>
+                <version>${jmdns.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-api</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+            <dependency>
+                <groupId>net.posick</groupId>
+                <artifactId>mdnsjava</artifactId>
+                <version>${mdnsjava.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>net.posick</groupId>
+                <artifactId>mdnsjava-spi</artifactId>
+                <version>${mdnsjava.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
