Update plugin and dependency versions

--- a/appa-binaries/pom.xml
+++ b/appa-binaries/pom.xml
@@ -29,25 +29,25 @@
         <dependency>
             <groupId>org.atlanmod.zoo</groupId>
             <artifactId>emf-graph</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
 
         <dependency>
             <groupId>org.atlanmod.zoo</groupId>
             <artifactId>emf-smm</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
 
         <dependency>
             <groupId>org.atlanmod.zoo</groupId>
             <artifactId>emf-java</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
 
         <dependency>
             <groupId>org.atlanmod.zoo</groupId>
             <artifactId>emf-widespread</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
 
         <dependency>
