--- a/appa-bootstrapper/pom.xml
+++ b/appa-bootstrapper/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>org.atlanmod.appa</groupId>
             <artifactId>appa-core</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
@@ -29,7 +29,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>3.2.4</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
